--- a/README.Rmd
+++ b/README.Rmd
@@ -14,43 +14,70 @@ knitr::opts_chunk$set(
 ```
 
 # codexplor
-
+[🧰🔧🔨 UNDER CONSTRUNCTION 🧰🔧🔨]
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![CRAN status](https://www.r-pkg.org/badges/version/codexplor)](https://CRAN.R-project.org/package=codexplor)
 <!-- badges: end -->
 
-The goal of codexplor is to ...
+The goal of codexplor is to Explore And Dataviz' Your Code Files with func' dedicated to explore and understand your programing files. You should try to :
+
+⏩ Get a network of the func' in your project, looking for cascading dependancies. 
+
+⏩ Identifying higher-level func' and the ones they launch [...] 
+
+⏩ Made some cool dataviz' about your func' network, in order to coordinate large programming project, made helper func' for new colleagues and/or future you, and relaxing da etc.
 
 ## Installation
 
-You can install the development version of codexplor like so:
+You can't install the development version of codexplor yet
 
 ``` r
-# FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE?
+cat("patience")
 ```
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+A - not so - lovely dog <3 is waiting here :
 
 ```{r example}
 library(codexplor)
 ## basic example code
+cat("
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣀⣀⣠⣤⣤⣤⣤⣤⣤⣄⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣰⡾⠛⠉⠉⠉⠁⠀⠀⠀⠀⠉⠉⠉⠛⠷⣦⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣰⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⡀⠀⠈⠙⢿⣄⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⡾⠛⠛⢷⡆⠀⠀⠉⠉⠛⠶⣦⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⡿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⢿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⡇⠀⠀⠀⠀⠀⠀⠀⢀⣴⠟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⢿⣆⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⡇⠀⠀⠀⠀⠀⣠⣴⠟⣅⣠⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢻⣧⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⠇⠀⠀⢀⣠⣾⠟⠁⢸⣿⣿⡿⢿⡆⠀⠀⠀⠀⠀⢀⣤⠀⠀⠀⠀⠀⠀⠀⠀⢿⣆⡀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣰⠟⠀⢀⣴⠟⣿⠃⠀⠀⠸⣿⣿⣷⡾⠃⠀⠀⢀⣠⣶⡟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠿⣦⡄⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣴⠏⣠⡾⠛⠁⣸⡇⠀⠀⠀⠀⠈⠉⠉⢀⣠⡴⠚⠋⣡⡟⠀⠀⠀⠀⠀⠀⠀⠀⢠⣄⠀⠀⠘⣿⡀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣾⡿⠛⠋⠀⠀⢀⡿⠀⠀⣀⣠⣤⠖⠛⠛⠉⠁⠀⠀⠀⡿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢻⠀⠀⠀⠸⣷⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⠉⠀⠀⠀⠀⢀⣾⢁⣴⠟⠋⠉⠀⠀⠀⠀⠀⠀⠀⠀⣸⠇⠀⣠⣶⣶⣦⡀⠀⠀⠀⢀⣿⠀⠀⠀⠀⢻⣧⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣾⣿⠋⠀⠀⠀⢀⡀⠀⠀⠀⠀⠀⠀⢰⠏⠀⠀⣿⣿⣿⠟⡇⠀⠀⠀⣼⡏⠀⠀⠀⠀⠀⢿⡆⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣾⠋⢸⣧⠀⠀⠀⠸⢿⣿⣿⣦⡀⠀⠀⠀⡟⠀⠀⠀⠙⠿⠿⠚⠁⠀⢀⣼⠏⠀⠀⠀⠀⠀⠀⠸⣿⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣰⡟⠁⠀⠘⣿⣤⣀⠀⠈⣿⣿⢿⣿⡇⠀⠀⠀⡇⠀⠀⠀⠀⠀⠀⠀⣠⣴⣿⠋⠀⠀⠀⠀⠀⠀⠀⢠⣿⠁
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⠏⠀⠀⠀⠀⢹⡍⠛⢷⣄⠉⠉⠁⠉⠀⠀⠀⣼⠃⠀⠀⠀⣀⣤⣶⠿⢻⣿⠁⠀⠀⠀⠀⠀⢀⣠⣴⠟⠁⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣰⡏⠀⠀⠀⠀⠀⠀⠻⣆⡀⢻⣆⠀⠀⠀⠀⢀⣼⣁⣀⣤⡶⠿⠛⣿⡤⠀⣼⠇⠀⠀⠀⢀⣤⡶⠟⠋⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⠁⠀⠀⠀⠀⠀⠀⠀⠈⠉⠛⠛⠻⠶⠶⠾⠟⠛⠉⠉⠁⠀⠀⠀⠛⣷⠀⣿⠀⠀⠀⣴⡟⠋⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣸⡿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢿⡇⣿⠀⠀⣼⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣷⢹⣇⢠⡿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⠈⢿⣾⠇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⠏⠸⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⠀⠸⠿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+")
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
 
-```{r cars}
-summary(cars)
-```
+I don't need to render `README.Rmd` regularly, since keep `README.md` up-to-date is near to useless. `devtools::build_readme()` is handy for this.
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-
-You can also embed plots, for example:
+I can also embed plots, for example:
 
 ```{r pressure, echo = FALSE}
 plot(pressure)
+
+# In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
+
 ```
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
