--- a/README.Rmd
+++ b/README.Rmd
@@ -14,15 +14,15 @@ knitr::opts_chunk$set(
 ```
 
 # codexplor
-🧰🔧🔨 UNDER CONSTRUNCTION 🧰🔧🔨
+🧰🔧🔨 UNDER CONSTRUCTION 🧰🔧🔨
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![CRAN status](https://www.r-pkg.org/badges/version/codexplor)](https://CRAN.R-project.org/package=codexplor)
 <!-- badges: end -->
 
-The goal of codexplor is to Explore Your Codes Files, with a bunch of dedicated func'. Soon, you should try to :
+codexplor Read Your Codes Files and construct a network of the text-content. By default, codexplor is tunned for R code.
 
-⏩ Get a network of func’ iby passing a folder path to get_text_network_from_files()
+⏩ Get a network of func’ by passing a folder path to get_text_network_from_files()
 
 ⏩ Get metrics and identifying cascading dependancies of func' [🔧🔨]
 
@@ -30,7 +30,7 @@ The goal of codexplor is to Explore Your Codes Files, with a bunch of dedicated 
 
 ⏩ Made some cool dataviz' about your func' network [🔧🔨]
 
-And other features, more or less useful for coordinate large programming project, made helper func' for new colleagues and/or future you, and chill in front of cool megalomaniac dataviz about your programming world.
+And other features useful for coordinate large programming project, made helper func' for new colleagues and/or future you, and chill in front of cool megalomaniac dataviz about your programming world.
 
 ## Installation
 
