--- a/vignettes/cascading_matching.Rmd
+++ b/vignettes/cascading_matching.Rmd
@@ -1,47 +1,11 @@
 ---
-title: "Introducing cascading matching for text"
+title: "cascading_matching"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{cascading_matching}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-Cascading text research basically consisting in searching in a document, in order to identify synonym of the doc' name (for example "name of a recipe").
-
-codexplor offer supervised way of find these synonym (i.e. by indicating a regex, which heavily rely on the presence of a precise pattern)
-
-and replace the names of a document by another term, then search for this term and consider it as a synonym of your formal document name.
-
-I. try to extract a *1st matched* content from a first pattern
-II. construct a new pattern with all these *'1stly matched'* text => and then extract these pattern by searching the same content again. 
-
-For example, giving a bunch of :
-
-- R codes files path and/or url, you should first read all the content and get a network of func'.
-
-> `net <- get_text_network_from_files("~",   regex_to_exclude_files_path = "test-")`
-> `get_networkd3_from_igraph(get_igraph_from_df(net) )`
-
-The citations-network we made here is directed. 
-
-- indegrees of a node is 'how many functions use this precise func'. 
-- Outdegree of a node is "how many functions are used by this precise function". 
-- ⟲ auto-mentioning basically reveal 'recursivity' (removed from the networks created by codexplor, by default)
-
-The "false positive" matches are, for example, the lines where you use the name of another function in a message, e.g. `cat("my_func() is deprecated. You should use this_function() instead)`. 
-
-`get_text_network_from_files` offer several parameters for deal with your style of writing, if you really need to write functions names in other files than the ones that define the func'.
-
-
-
-- e-mail => you maybe want to match every word with "@" character in the header part of your mails (expeditor, object, etc.), and then search for these usernnames in every e-mail header. You've just made a network of people who interact by mail, by only indicating the regex that match a character string that contain "@", with a capture-group for extracting the text before the '@'.
-
-Here, you want to extract the first text of a paragraph, everytime followed by these 2 chars : ". -")you'll typically discover that craft a lot of 'sauce' is necessary, and near to half of them need themselves a firstly prepared sauce and/or stock
-ChatGPT is bad for indicate you how to cook, giving the fact it have been trained with shitty amateur content. You should open the single "Guide Culinaire" from Escoffier and you'll certainly find that with a single source , your model will give you very good recipes (here we are gonna pretend that - near to - every recipe that is not in this book is a scam and not interest us, but feel free to add a 2nd source or even a third one ^^).
-
-Firstly, get_text_network_from_files() will read files in a folder - including subdirectories - and extract the text that match a pattern. Then, you explore 
-
-fn_net <- get_text_network_from_files("~")
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
@@ -50,8 +14,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
-library(codexplor)
+`codexplor::get_text_network_from_files()` offers successive text-researches, with a pattern searched that is changed dynamically between the 1st and the 2nd research, depending on the matches from the 1st research. In other terms, each iteration will extract text according to a 1st pattern => and create a 2nd pattern dynamically with the extracted text, in order to use it as the next pattern searched for. The number of successive researches iteration is the depth of this cascading research.
 
-# fn_net <-get_text_network_from_files("~")
-```
+Several properties are herited from the network-theory (e.g., Citations Network are a 'directed' type of network)
+
+**Turn cascading research into recursive-cascading-research.** Latter, codexplor will offer methods - not implemented yet - for realize a complete scanning of the packages used by a project as external dependancies : there will certainly be a recursive research of content on github between the 1st and the 2nd text-research of the cascading process, in order to get a complete corpus before to leave the step 1 to the step 2. 
+
