--- a/README.Rmd
+++ b/README.Rmd
@@ -42,7 +42,7 @@ devtools::install_github("clement-LVD/codexplor")
 ## Example 
 Hereafter we use the default parameters, dedicated to analyze .R codes files.
 
-⏩ *1. Create a corpus as a list of files path and/or url.*
+⏩ **1. Create a corpus as a list of files path and/or url.**
 
 If the project is on your local machine, you should use : 
 
@@ -53,27 +53,25 @@ If the project is a R public github repo :
     paths <- get_github_raw_filespath(repo = "tidyverse/readr", pattern = "\\.R")
     #  Return characters list with ≃ 75 url of .R files 
     
-⏩ *2. Read the files and get a citations network of func'.* 
+⏩ **2. Read the files and get a citations network of func'.**
     
     # [assuming `paths` is a list of files path and/or url]
     net <- get_text_network_from_files(paths, regex_to_exclude_files_path = "test-", ignore_match_less_than_nchar = 5)
     # Return a data.frame, an edgelist of the functions network (≃  572 obs. and 7 variables with readr repo)
 
-Here we read the files with the default parameters of [get_text_network_from_files()](vignettes/get_text_network_from_files).
+Here we read the files with the default parameters of [get_text_network_from_files()](vignettes/get_text_network_from_files). On .R files, this function have constructed a Citations Network, thanks to a ['cascading matching'](vignettes/cascading_matching.html). In this example we have excluded some results from the network : every url that contain "test-" and the matches with less than 5 char, e.g., `cli()` is not matched since it's a 3 letters match. 
 
-Next, the function have constructed a Citations Network with these functions names, thanks to a ['cascading matching'](vignettes/cascading_matching.html). Finally, this example have excluded some results from the network : every url that contain "test-" and the matches with less than 5 char, e.g., `cli()` is not matched since it's a 3 letters match). 
-
-⏩ *3. Turn it into a directed `igraph` network object.*
+⏩ **3. Turn it into a directed `igraph` network object.**
 
     netig <- get_igraph_from_df(net) 
     # return an 'igraph' object from our edgelist with 18 links and 19 nodes (files path are in relationship)
 
-⏩ *4. Get an interactive `networkD3` JS object.*
+⏩ **4. Get an interactive `networkD3` JS object.**
 
     get_networkd3_from_igraph(netig) 
     #return a networkD3 object, an interactive network dataviz'
     
-⏩ *5. Get metrics and identifying cascading dependancies of func'*
+⏩ **5. Get metrics and identifying cascading dependancies of func'**
 
 Under construction [🔧🔨]
 
@@ -81,7 +79,7 @@ Under construction [🔧🔨]
 ---
 In order to use codexplor on various programming project, there is several useful parameters to take care with, depending on the languages you have to manage. Default are tunned for a R programming project.
 
-> **Usecases.** codexplor help me to priorize my time and apprehend the big picture of a large programming project quickly, with precious network analysis and dataviz'. I've really good insights about the project, when I want to find where to start a polishing loop, follow a programming project or show it to other (e.g., animate dev' network).
+> **Usecases.** codexplor help me to priorize my time and get the big picture of a large programming project quickly, with precious network analysis and dataviz'. I have really good insights about the project, it's simpler to find where to start a polishing loop, follow a programming project or show it to other.
 
  
 ```{r example, eval=FALSE, include=FALSE}
