--- a/README.Rmd
+++ b/README.Rmd
@@ -20,16 +20,27 @@ return("<style>
 ```
 
 # codexplor
-🧰🔧🔨 DOC. UNDER CONSTRUCTION 🧰🔧🔨
+🧰🔧🔨 UNDER CONSTRUCTION 🧰🔧🔨
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 ![Project Progress](https://img.shields.io/badge/Progress-1%2F4%20%7C%20Active_coding-orange)
 [![CRAN status](https://www.r-pkg.org/badges/version/codexplor)](https://CRAN.R-project.org/package=codexplor)
 <!-- badges: end -->
 
-codexplor is a R package that offers functions for explore and understand a programming project, with specialized tools for *understand quickly, analyze and visualize a programming project* (e.g., see which functions are the most used by others func' of the project, which one used others func' of the project and thus have local dependencies). 
+`codexplor` is a R package that offers functions for explore and understand a programming project : these tools are aimed to helping you to understand quickly the project, by analyze and visualize it. 
 
-codexplor offer functions for realize a complete network analysis protocol of your R programming project, from the constitution of your corpus of documents [...] to the realization of your network analysis. It's a game changer to get rid of the global complexity of the project^[**Local complexity** is the complexity of an individual file (how long and difficult to read is each of your files ?). **Global complexity** is the difficulty to understand the big picture : how many functions are used and what are the relationship between the various functions in this project ?].
+> `codexplor` help you to analyze a programming project, from the early stage [...] to the last step (e.g., text-mining metrics, network analysis & dataviz'). Get rid of complexity wit `codexplor` ! 
+
+
+```{r features-table, echo=FALSE}
+
+ff <- data.frame('Features' =  "Constitute a network of functions and get immediate network theory metrics. For example, given a programming project, you will identify the functions that are used by many others functions ('internal dependancies') and the ones that are build on top of several others functions (high-level functions).")
+
+rownames(ff) <- c("Network of internal dependencies (Citations Network)")
+
+knitr::kable(ff, row.names = T)
+
+```
 
 
 ## Installation
@@ -57,29 +68,42 @@ If the project is a R public github repo :
     
     # [assuming `paths` is a list of files path and/or url]
     net <- get_text_network_from_files(paths, regex_to_exclude_files_path = "test-", ignore_match_less_than_nchar = 5)
-    # Return a data.frame, an edgelist of the functions network (≃  572 obs. and 7 variables with readr repo)
+    # Return a data.frame, an edgelist of the functions network (≃  573 obs. and 7 variables with readr repo)
 
-Here we read the files with the default parameters of [get_text_network_from_files()](vignettes/get_text_network_from_files). On .R files, this function have constructed a Citations Network, thanks to a ['cascading matching'](vignettes/cascading_matching.html). In this example we have excluded some results from the network : every url that contain "test-" and the matches with less than 5 char, e.g., `cli()` is not matched since it's a 3 letters match. 
+Here we read the .R files with the default parameters of [get_text_network_from_files()](vignettes/get_text_network_from_files). This function have returned an edgelist that represent a Citations Network, thanks to a ['cascading matching'](vignettes/cascading_matching.html). In this example we have excluded some results from the returned edgelist (every url that contain "test-" and the matches with less than 5 char, e.g., `cli()` is not matched since it's a 3 letters func' name). 
 
 ⏩ **3. Turn it into a directed `igraph` network object.**
 
     netig <- get_igraph_from_df(net) 
     # return an 'igraph' object from our edgelist with 18 links and 19 nodes (files path are in relationship)
 
-⏩ **4. Get an interactive `networkD3` JS object.**
+⏩ **4. Get an interactive `networkD3` HTML object**
 
     get_networkd3_from_igraph(netig) 
-    #return a networkD3 object, an interactive network dataviz'
+ 
+Return a list of 2 objects : 
+
+1. a list named `'net3d'` with 2 data.frames, with the data used by `networkD3` (`'nodes'` and `'edges'`)
+
+2. a networkD3::forceNetwork S3 class object named `'forcenetwork'`, an html interactive network dataviz'
+
+You should play with the parameters, e.g., coloring nodes depending on their outdegrees :
+
+     get_networkd3_from_igraph(netig, color_outdeg_instead_of_indeg = T) 
+
+![The interactive network dataviz'](man/figures/example_net3d_dataviz.png)
+For example, we quickly see that, in the readr repo, read_fwf.R use several others functions, and is even used by another one (i.e. melt_table.R)
     
 ⏩ **5. Get metrics and identifying cascading dependancies of func'**
 
 Under construction [🔧🔨]
 
-
 ---
 In order to use codexplor on various programming project, there is several useful parameters to take care with, depending on the languages you have to manage. Default are tunned for a R programming project.
 
-> **Usecases.** codexplor help me to priorize my time and get the big picture of a large programming project quickly, with precious network analysis and dataviz'. I have really good insights about the project, it's simpler to find where to start a polishing loop, follow a programming project or show it to other.
+> **Usecases 1.** codexplor help me to priorize my time and get the big picture of a large programming project quickly, with precious network analysis and dataviz'. I have really good insights about the project, it's simpler to find where to start a polishing loop, follow a programming project or show it to the dev' and tech' profiles.
+
+> **Usecases 2.** I used the function for add insights on a particular function (e.g., list all the local dependancies of this function and the functions that use it as a local dependancy).
 
  
 ```{r example, eval=FALSE, include=FALSE}
