--- a/README.Rmd
+++ b/README.Rmd
@@ -20,27 +20,16 @@ return("<style>
 ```
 
 # codexplor
-🧰🔧🔨 UNDER CONSTRUCTION 🧰🔧🔨
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-![Project Progress](https://img.shields.io/badge/Progress-1%2F4%20%7C%20Active_coding-orange)
+![Project Progress](https://img.shields.io/badge/R-black)
 [![CRAN status](https://www.r-pkg.org/badges/version/codexplor)](https://CRAN.R-project.org/package=codexplor)
 <!-- badges: end -->
 
-`codexplor` is a R package that offers functions for explore and understand a programming project : these tools are aimed to helping you to understand quickly the project, by analyze and visualize it. 
+🧰🔧🔨 UNDER CONSTRUCTION 🧰🔧🔨
 
-> `codexplor` help you to analyze a programming project, from the early stage [...] to the last step (e.g., text-mining metrics, network analysis & dataviz'). Get rid of complexity wit `codexplor` ! 
+`codexplor` offers R functions for explore and monitor a programming project with text-mining methods : get a deep understanding of the programming project by analyze and visualize it with text-mining metrics, network analysis & dataviz'. 
 
-
-```{r features-table, echo=FALSE}
-
-ff <- data.frame('Features' =  "Constitute a network of functions and get immediate network theory metrics. For example, given a programming project, you will identify the functions that are used by many others functions ('internal dependancies') and the ones that are build on top of several others functions (high-level functions).")
-
-rownames(ff) <- c("Network of internal dependencies (Citations Network)")
-
-knitr::kable(ff, row.names = T)
-
-```
 
 
 ## Installation
@@ -50,32 +39,64 @@ You can install the development version of codexplor with
 devtools::install_github("clement-LVD/codexplor")
 ```
 
-## Example 
+## Features
+- **Appreciate global complexity of a project with a network of internal dependencies.** 
+    - **Citations Network** Get metrics & dataviz' about the functions defined in the project (e.g. explore global structure or zoom on major internal dependancies^[functions that are called by others functions of the project]).
+- **Assess local complexity with text-Mining metrics.** 
+  - Compute document-level metrics (e.g., files readability)
+- ...
+
+## Short Example
+1. Constitute your 'corpus' of local files and/or urls, eventually from a github repo with ![.](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=get-github-raw-filespath()&labelColor=green&color=black)
+
+2. Compute a Citations Network by passing files path and/or urls to   ![.](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=get-text-network-from-files()&labelColor=yellow&color=black)
+
+3. Get a directed network with `igraph` by passing an edgelist to  ![1.](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=get-igraph-from-df()&labelColor=yellow&color=black)
+
+5. Optionnaly zoom on a precise function with 
+![](https://img.shields.io/badge/{Function}-bold?style=flat&logoColor=black&logoSize=2&label=filter-igraph-egonetwork()&labelColor=green&color=black)
+
+4. Look at a quick dataviz' with `networkD3` : ![](https://img.shields.io/badge/{Dataviz}-bold?style=flat&logoColor=black&logoSize=2&label=get-networkd3-from_igraph()&labelColor=yellow&color=black)
+
+
+
+Planned features : 
+![](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=Text-mining&labelColor=orange&color=black)
+![](https://img.shields.io/badge/{Export}-bold?style=flat&logoColor=black&logoSize=2&label=Reporting&labelColor=orange&color=black)
+
+
+
+## Complete Example 
 Hereafter we use the default parameters, dedicated to analyze .R codes files.
 
-⏩ **1. Create a corpus as a list of files path and/or url.**
+⏩ **1. Create a corpus a list of files path and/or url.**
 
-If the project is on your local machine, you should use : 
+List .R files, from url and/or on your locale machine :
 
     paths <- list.files(path = "~/", ignore.case = T, all.files = T, full.names = T, recursive = T, pattern = ".R$") 
 
-If the project is a R public github repo :
+And/or from public github repo :
 
-    paths <- get_github_raw_filespath(repo = "tidyverse/readr", pattern = "\\.R")
-    #  Return characters list with ≃ 75 url of .R files 
+    paths <- codexplor::get_github_raw_filespath(repo = "tidyverse/readr", pattern = "\\.R")
+    #  Return characters list of url of .R files from https://raw.githubusercontent.com/
     
 ⏩ **2. Read the files and get a citations network of func'.**
-    
-    # [assuming `paths` is a list of files path and/or url]
-    net <- get_text_network_from_files(paths, regex_to_exclude_files_path = "test-", ignore_match_less_than_nchar = 5)
-    # Return a data.frame, an edgelist of the functions network (≃  573 obs. and 7 variables with readr repo)
 
-Here we read the .R files with the default parameters of [get_text_network_from_files()](vignettes/get_text_network_from_files). This function have returned an edgelist that represent a Citations Network, thanks to a ['cascading matching'](vignettes/cascading_matching.html). In this example we have excluded some results from the returned edgelist (every url that contain "test-" and the matches with less than 5 char, e.g., `cli()` is not matched since it's a 3 letters func' name). 
 
-⏩ **3. Turn it into a directed `igraph` network object.**
+    net <- codexplor::get_text_network_from_files(paths, 
+    regex_to_exclude_files_path = "test-", ignore_match_less_than_nchar = 5)
+    # Return a data.frame, edgelist of the functions citations network
 
-    netig <- get_igraph_from_df(net) 
-    # return an 'igraph' object from our edgelist with 18 links and 19 nodes (files path are in relationship)
+Assuming the user provide a list of files paths and/or url, `get_text_network_from_files()` will :
+
+- read the files and extract a first pattern (e.g., with the defaults parameters a regex will extract R functions names as soon as they are defined within a file). 
+- search for these pattern (functions names by default) in the contents of the files, in order to constitute a Citations Network - a 'directed' type of network.
+- return the edgelist, with some filters (hereabove, we ask for exclude files that contain "test-" and the matches with less than 5 char from the edgelist, e.g., `cli()` will not be matched since it's a 3 letters function name). 
+
+⏩ **3. Get a directed `igraph` network object.**
+
+    netig <- codexplor::get_igraph_from_df(net) 
+    # return a directed 'igraph' object from our edgelist
 
 ⏩ **4. Get an interactive `networkD3` HTML object**
 
@@ -92,19 +113,24 @@ You should play with the parameters, e.g., coloring nodes depending on their out
      get_networkd3_from_igraph(netig, color_outdeg_instead_of_indeg = T) 
 
 ![The interactive network dataviz'](man/figures/example_net3d_dataviz.png)
-For example, we quickly see that, in the readr repo, read_fwf.R use several others functions, and is even used by another one (i.e. melt_table.R)
-    
+
 ⏩ **5. Get metrics and identifying cascading dependancies of func'**
 
 Under construction [🔧🔨]
 
 ---
-In order to use codexplor on various programming project, there is several useful parameters to take care with, depending on the languages you have to manage. Default are tunned for a R programming project.
+There is several useful parameters to take care with, depending on the languages you have to manage. Default is for a R programming project.
 
-> **Usecases 1.** codexplor help me to priorize my time and get the big picture of a large programming project quickly, with precious network analysis and dataviz'. I have really good insights about the project, it's simpler to find where to start a polishing loop, follow a programming project or show it to the dev' and tech' profiles.
+<!--
+> `codexplor` help you to manage and analyze a programming project, giving you tools to figure out the big picture and to find the little wrench in the (net)work. 
 
-> **Usecases 2.** I used the function for add insights on a particular function (e.g., list all the local dependancies of this function and the functions that use it as a local dependancy).
+> **Usecases 1.** As a head of a dozens of persons (non-tech) team', I have to dev' actively on the long run. codexplor help me to get the big picture of a large programming project quickly, with instant metrics & insights. Thanks to the network analysis and dataviz', I have deep insights about the project, such as for identifying theoritical vulnerability, for choosing where to start a polishing loop, but also for following a programming project over the long run. 
 
+> **Usecases 2.** I can show the network or a small part of the network to the dev' and tech' profiles during our meetings or event prez'.
+
+> **Usecases 3.** codexplor add insights on a particular function, as an help for the dev' when it come back on a project after a while (e.g., list all the local dependancies of a function and the functions that call it as a local dependancy).
+
+-->
  
 ```{r example, eval=FALSE, include=FALSE}
 # library(codexplor)
