--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ return("<style>
 
 🧰🔧🔨 UNDER CONSTRUCTION 🧰🔧🔨
 
-`codexplor` offers R functions for explore and monitor a programming project with text-mining methods : analyze and visualize your programming project with text-mining metrics, network analysis & dataviz'. Get a deep understanding and get rid of complexity. 
+`codexplor` offers R functions for explore and monitor a programming project with text-mining methods : analyze and visualize the project with text-mining metrics, network analysis & dataviz'. Get a deep understanding and get rid of complexity. 
 
 
 
